# drf-api-permissions-postgres-deploy

./: Dockerfile  docker-compose.yml  docker-start.sh  pyproject.toml
courses/: models.py  permissions.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
summer_camp_api_project/: settings.py  urls.py
